RESOLVED FIXED126795
CTTE FrameTree
https://bugs.webkit.org/show_bug.cgi?id=126795
Summary CTTE FrameTree
Anders Carlsson
Reported 2014-01-10 17:12:00 PST
CTTE FrameTree
Attachments
Patch (11.41 KB, patch)
2014-01-10 17:12 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2014-01-10 17:12:58 PST
WebKit Commit Bot
Comment 2 2014-01-10 17:14:58 PST
Attachment 220908 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/page/Frame.cpp', u'Source/WebCore/page/FrameTree.cpp', u'Source/WebCore/page/FrameTree.h', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/page/Frame.cpp:165: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-01-10 17:15:10 PST
Note You need to log in before you can comment on or make changes to this bug.