CTTE FrameTree https://bugs.webkit.org/show_bug.cgi?id=126795

Reviewed by Tim Horton.

* page/Frame.cpp:
(WebCore::Frame::Frame):
* page/FrameTree.cpp:
(WebCore::FrameTree::transferChild):
(WebCore::FrameTree::appendChild):
(WebCore::FrameTree::actuallyAppendChild):
(WebCore::FrameTree::uniqueChildName):
(WebCore::FrameTree::scopedChild):
(WebCore::FrameTree::scopedChildCount):
(WebCore::FrameTree::child):
(WebCore::FrameTree::find):
(WebCore::FrameTree::isDescendantOf):
(WebCore::FrameTree::traverseNext):
(WebCore::FrameTree::traverseNextWithWrap):
(WebCore::FrameTree::traversePreviousWithWrap):
(WebCore::FrameTree::deepLastChild):
(WebCore::FrameTree::top):
* page/FrameTree.h:
(WebCore::FrameTree::FrameTree):

Canonical link: https://commits.webkit.org/144711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161703 268f45cc-cd09-0410-ab3c-d52691b4dbfc